--- a/frontend-maid-pro/src/components/BookingCard/BookingCard.css
+++ b/frontend-maid-pro/src/components/BookingCard/BookingCard.css
@@ -100,5 +100,13 @@
 
 .BookingCard-Cancel-Description {
   margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 20px;
+}
+
+.BookingCard-submit {
+  box-shadow: none;
+  border: none;
+  margin-right: 0.5rem;
+  background-color: #005792;
+  color: white;
 }
