--- a/frontend-maid-pro/src/pages/RegistrationMaid/RegistrationMaid.css
+++ b/frontend-maid-pro/src/pages/RegistrationMaid/RegistrationMaid.css
@@ -37,8 +37,8 @@
   border-color: #005792;
   background-color: #005792;
   color: white;
-  margin-top: 2%;
-  width: 130px;
+  margin-top: 6%;
+  width: 290px;
 }
 
 .RegistrationMaid-CancelButton {
@@ -46,12 +46,22 @@
   border-radius: 11px;
   border-color: #005792;
   color: #005792;
-  margin-top: 2%;
-  width: 130px;
+  margin-top: 6%;
+  width: 290px;
 }
 
 .RegistrationMaid-Footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+@media only screen and (max-height: 593px) {
+  .RegistrationMaid-LoginButton{
+    margin-top: 2%;
+  }
+  
+  .RegistrationMaid-CancelButton {
+    margin-top: 2%;
+  }
 }
