--- a/frontend-maid-pro/src/pages/LoginPage/LoginPage.css
+++ b/frontend-maid-pro/src/pages/LoginPage/LoginPage.css
@@ -12,6 +12,11 @@
   color: rgba(0,0,0,.25);
 }
 
+.LoginPage-PasswordPrefix {
+  color: rgba(0,0,0,.25);
+  margin-top: 2px;
+}
+
 .LoginPage-ForgetPassword {
   margin-bottom: 2%;
 }
