--- a/frontend-maid-pro/src/pages/HomePage/HomePage.css
+++ b/frontend-maid-pro/src/pages/HomePage/HomePage.css
@@ -1,3 +1,7 @@
+.HomePage-Carousel {
+  width: 100%;
+}
+
 .HomePage-ServiceButtons {
   box-shadow: none;
   border-color: black;
@@ -21,11 +25,7 @@
 
 
 
-.HomePage-Carousel-img {
-  width: 100%;
-}
-
-@media screen and (min-width: 700px) {
+/* @media screen and (min-width: 700px) {
   div.HomePage-Carousel-container {
     min-width: 100%;
     height: 400px;
@@ -40,4 +40,4 @@
     display: flex;
     justify-content: center;
   }
-}
+} */
