--- a/frontend-maid-pro/src/pages/HomePage/HomePage.css
+++ b/frontend-maid-pro/src/pages/HomePage/HomePage.css
@@ -1,5 +1,11 @@
 .HomePage-Carousel {
-  width: 100%;
+  height: 100%;
+  max-height: 500px;
+}
+
+.HomePage-CarouselDiv {
+  display: flex !important;
+  justify-content: center;
 }
 
 .HomePage-ServiceButtons {
