--- a/frontend-maid-pro/src/pages/LoginPage/LoginPage.css
+++ b/frontend-maid-pro/src/pages/LoginPage/LoginPage.css
@@ -31,7 +31,7 @@
   width: 130px;
 }
 
-.LoginPage-CancelButton {
+.LoginPage-CreateAccountButton {
   box-shadow: none;
   border-radius: 11px;
   border-color: #005792;
@@ -44,4 +44,8 @@
   position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+.ant-form-item {
+  margin-bottom: 8px !important;
 }
