--- a/frontend-maid-pro/src/pages/HomePage/HomePage.css
+++ b/frontend-maid-pro/src/pages/HomePage/HomePage.css
@@ -1,11 +1,3 @@
-.HomePage-Carousel {}
-
-.HomePage-CarouselImage {
-  width: 100%;
-  height: 100%;
-
-}
-
 .HomePage-HeaderText {
   margin-top: 10.5px;
 }
@@ -31,8 +23,15 @@
   padding-top: 10%;
 }
 
-@media only screen and (min-width: 845px) {
+@media only screen and (max-width: 1024) {
   .HomePage-Carousel {
-    /* display: none; */
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media only screen and (min-width: 1025px) {
+  .HomePage-CarouselImage {
+    padding: 0% 19%;
   }
 }
