--- a/frontend-maid-pro/src/pages/LoginPage/LoginPage.css
+++ b/frontend-maid-pro/src/pages/LoginPage/LoginPage.css
@@ -49,3 +49,12 @@
 .ant-form-item {
   margin-bottom: 8px !important;
 }
+
+@media only screen and (max-width: 360px) {
+  .LoginPage-Input {
+    line-height: 0;
+  }
+  .LoginPage-Divider {
+    display: none;
+  }
+}
