--- a/frontend-maid-pro/src/pages/AboutUs/AboutUs.css
+++ b/frontend-maid-pro/src/pages/AboutUs/AboutUs.css
@@ -1,14 +1,14 @@
 .AboutUs-Content {
-  margin-top: 3%;
+  margin-top: 3rem;
 }
 
 .AboutUs-Margintop3p {
-  margin-top: 3%;
+  margin-top: 2rem;
 }
 
 .AboutUs-MapRow {
-  margin-top: 1%;
-  margin-bottom: 2%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .AboutUs-Map {
