--- a/frontend-maid-pro/src/pages/Payment/Payment.css
+++ b/frontend-maid-pro/src/pages/Payment/Payment.css
@@ -17,6 +17,7 @@
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
   padding: 1.5%;
+  text-align: center;
 }
 
 .Payment-LastTableRow {
@@ -28,7 +29,6 @@
   border-radius: 50%;
   min-width: 45px;
   max-width: 60px;
-  margin-left: 5%;
 }
 
 .Payment-BankNameKBank {
@@ -72,8 +72,14 @@
   margin-bottom: 0.5rem;
 }
 
-@media only screen and (max-width: 600px) {
-  .Payment-Content {
-    /* display: none; */
+/* @media only screen and (min-width: 576px) {
+  .Payment-BankLogo {
+    margin-left: 10%;
+  }
+} */
+
+@media only screen and (max-width: 575px) {
+  .Payment-BankTableRow {
+    padding-top: 2.5%;
   }
 }
