--- a/frontend-maid-pro/src/components/Navbar/Navbar.css
+++ b/frontend-maid-pro/src/components/Navbar/Navbar.css
@@ -37,6 +37,12 @@
   background-color: transparent;
 }
 
+.Navbar-Center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media only screen and (min-width: 845px) {
   .Navbar-Icon {
     display: none;
