--- a/frontend-maid-pro/src/components/Navbar/Navbar.css
+++ b/frontend-maid-pro/src/components/Navbar/Navbar.css
@@ -43,6 +43,12 @@
   align-items: center;
 }
 
+.Navbar-imgDropdown {
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+}
+
 @media only screen and (min-width: 845px) {
   .Navbar-Icon {
     display: none;
