--- a/frontend-maid-pro/src/components/Navbar/Navbar.css
+++ b/frontend-maid-pro/src/components/Navbar/Navbar.css
@@ -49,6 +49,10 @@
   border-radius: 50%;
 }
 
+.Navbar-MenuDropdown {
+  font-size: 16px;
+}
+
 @media only screen and (min-width: 845px) {
   .Navbar-Icon {
     display: none;
